<resources>
    <string name="app_name">NavDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="valtitlelogin">SIGN IN</string>
    <string name="valbtsave">LOGIN</string>
    <string name="valetemail">Enter email</string>
    <string name="valetpassword">Enter password</string>
    <string name="btprizes">Prizes</string>
    <string name="btTeams">Teams</string>
    <string name="btStadiums">Stadiums</string>
    <string name="txtHome">MENU</string>
    <string name="menu_prizes">Prizes</string>
    <string name="menu_teams">Teams</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_prize">Prizes</string>
</resources>